# ddd_tx_tut

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.aws/: config  credentials
.github/workflows/: rust.yml
app/: cache.rs  cached_service.rs  dao.rs  domain.rs  dto.rs  dynamodb.rs  hs_db.rs  location.rs  macros.rs  main.rs  notifier.rs  pg_db.rs  rabbitmq.rs  redis_cache.rs  reporter.rs  service.rs  service_impl.rs  syslog.rs  usecase.rs
app/domain/: person.rs
app/service_impl/: db_base.rs  hash_base.rs  nosql_base.rs
app/usecase/: person.rs
docker-entrypoint-initdb.d/: initdb.sh
init-dynamodb.d/: init.sh  person.json
src/: lib.rs  main.rs  tx.rs
