[package]
name = "tx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
itertools = "0.13"
lapin = "2.5.0"
log = "0.4.22"
postgres = { version = "0.19.8", features = ["with-chrono-0_4"] }
redis = "0.26.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tx-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }

[[bin]]
name = "app"
path = "app/main.rs"
