[package]
name = "ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.55.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
itertools = "0.13"
lapin = "2.5.0"
log = "0.4.22"
postgres = { version = "0.19.8", features = ["with-chrono-0_4", "with-uuid-1"] }
redis = "0.26.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
syslog = "7.0.0"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tx-rs = { git = "https://github.com/cutsea110/fragments.git", package = "tx-rs", branch = "main" }
uuid = { version = "1.11.0", features = ["serde", "v7"] }

[[bin]]
name = "app-pq"
path = "app/main.rs"
required-features = ["use_pq"]

[[bin]]
name = "app-dynamo"
path = "app/main.rs"
required-features = ["use_dynamo"]

[features]
use_pq = []
use_dynamo = []
