[package]
name = "ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.100.0"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
itertools = "0.13"
lapin = "2.5.5"
log = "0.4.29"
postgres = { version = "0.19.12", features = ["with-chrono-0_4", "with-uuid-1"] }
redis = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syslog = "7.0.0"
thiserror = "1.0.69"
tokio = { version = "1", features = ["full"] }
tx-rs = { git = "https://github.com/cutsea110/fragments.git", package = "tx-rs", branch = "main" }
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[[bin]]
name = "app-hs"
path = "app/main.rs"
required-features = ["use_hash"]

[[bin]]
name = "app-pq"
path = "app/main.rs"
required-features = ["use_pq"]

[[bin]]
name = "app-dynamo"
path = "app/main.rs"
required-features = ["use_dynamo"]

[features]
use_hash = []
use_pq = []
use_dynamo = []
